Changed API calling to apache http client with handling of email validations based on input object rather than existing single class